--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,33 @@ edition = "2021"
 [dependencies]
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
+serde = { version = "1", features= ["derive"]}
+config = "0.14.0"
+uuid = { version = "1.8.0", features = ["v4"]}
+chrono = { version = "0.4.38", default-features = false, features = ["clock"]}
+
+[dependencies.sqlx]
+version = "0.7.4"
+default-features = false
+features = [
+    "runtime-tokio-rustls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono",
+    "migrate"
+]
+
+
+[dev-dependencies]
+reqwest = "0.12.3"
 
 #/[target.x86_64-apple-darwin]
 #rustflags = ["-C", "link-arg=-fuse-ld=lld"]
 
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "zero2prod"
