--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,15 +6,19 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4"
-tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
-serde = { version = "1", features= ["derive"]}
-config = "0.14.0"
-uuid = { version = "1.8.0", features = ["v4"]}
+actix-web = "4.9.0"
+tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"]}
+serde = { version = "1.0.214", features= ["derive"]}
+config = "0.14.1"
+uuid = { version = "1.11.0", features = ["v4"]}
 chrono = { version = "0.4.38", default-features = false, features = ["clock"]}
+log = "0.4.22"
+tracing = { version = "0.1.40", features = ["log"]}
+tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"]}
+tracing-bunyan-formatter = "0.3.9"
 
 [dependencies.sqlx]
-version = "0.7.4"
+version = "0.8.2"
 default-features = false
 features = [
     "runtime-tokio-rustls",
@@ -27,7 +31,7 @@ features = [
 
 
 [dev-dependencies]
-reqwest = "0.12.3"
+reqwest = "0.12.9"
 
 #/[target.x86_64-apple-darwin]
 #rustflags = ["-C", "link-arg=-fuse-ld=lld"]
