--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,15 +7,16 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.9.0"
-tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"]}
+tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"]}
 serde = { version = "1.0.214", features= ["derive"]}
 config = "0.14.1"
 uuid = { version = "1.11.0", features = ["v4"]}
 chrono = { version = "0.4.38", default-features = false, features = ["clock"]}
-log = "0.4.22"
 tracing = { version = "0.1.40", features = ["log"]}
+tracing-log = "0.2.0"
 tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"]}
 tracing-bunyan-formatter = "0.3.9"
+secrecy = { version = "0.10.3", features = ["serde"] }
 
 [dependencies.sqlx]
 version = "0.8.2"
@@ -32,6 +33,7 @@ features = [
 
 [dev-dependencies]
 reqwest = "0.12.9"
+once_cell = "1.20.2"
 
 #/[target.x86_64-apple-darwin]
 #rustflags = ["-C", "link-arg=-fuse-ld=lld"]
